fix line spacing

--- a/themes/minimalist/static/css/styles.css
+++ b/themes/minimalist/static/css/styles.css
@@ -554,7 +554,7 @@ hr {
   margin-top: 0; }
 
 .post p {
-  line-height: 28px; }
+  line-height: 20px; }
 
 .post h2 a,
 .post-template h1 {
